# api-e-commerce-steak

./: .dockerignore  .env.droplet.example  .env.example  .env.proxy.example  .gitignore  API_DOCS.md  Cargo.toml  DEPLOY_DROPLET.md  DEPLOY_DROPLET_MULTI_APP.md  Dockerfile  README.md  compose.droplet.app.yml  compose.droplet.proxy.yml  compose.droplet.yml
.github/workflows/: ci.yml
deploy/: Caddyfile
deploy/proxy/: Caddyfile
migrations/: 001_initial_schema.sql  002_security_hardening.sql  003_data_integrity_hardening.sql  004_product_image_management.sql  005_pending_product_images.sql  006_pending_product_image_deletions.sql  007_product_images_gallery.sql  008_product_categories.sql  009_shopping_cart.sql  010_oauth_login_tickets.sql  011_user_profile_fields.sql  012_unverified_user_cleanup_index.sql  013_user_profile_image_public_id.sql  014_oauth_login_ticket_hardening.sql  015_drop_address_country.sql  016_refresh_token_rotation_hardening.sql  017_admin_order_tracking_and_status.sql  018_categories_case_insensitive_uniqueness.sql  019_admin_order_queue_search_indexes.sql  020_order_payment_slip_flow.sql  021_product_category_slugs.sql  022_order_shipping_address_snapshots.sql
scripts/: deploy-droplet.sh
src/: config.rs  health.rs  main.rs
src/address/: handler.rs  model.rs  service.rs
src/auth/: handler.rs  model.rs  service.rs
src/cart/: handler.rs  model.rs  service.rs
src/category/: handler.rs  model.rs  service.rs
src/order/: handler.rs  model.rs  service.rs
src/product/: handler.rs  model.rs  service.rs
src/shared/: background.rs  email.rs  (+12 more)
(+4 files in other folders)
