[package]
name = "backend-rust-2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# UUID v7
uuid = { version = "1", features = ["v7", "serde"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Decimal
rust_decimal = { version = "1", features = ["db-postgres"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Hex encoding
hex = "0.4"
sha2 = "0.10"
